[metadata]
name = audiolizer
version = 0.0.1
author = Asher Pembroke
author_email = apembroke@gmail.com
description = An audiolization tool for market data
url = https://github.com/asherp/audiolizer
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.7
	Operating System :: OS Independent
	License :: OSI Approved
license = MIT

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  pandas
  plotly
  Historic-Crypto
  pyaudio
  audiogen

; [options.entry_points]
; console_scripts =
;     audiolizer = audiolizer.cli.main:entry